# consoles_data_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: main.py
data/: README.md
data/nintendo/: 3DS.csv  3DS_up_to_ FY3_2023.csv  DS.csv  DS_up_to_FY3_2023.csv  Gamecube_up_to_FY3_2023.csv  Switch.csv  Wii_WiiU.csv  Wii_WiiU_up_to_FY3_2023.csv
data/playstation/: PS4_PS5.csv
data/processed/: 3DS.csv  DS.csv  Gamecube.csv  Switch.csv  Wii_WiiU.csv  nintendo_hardware_totals_by_date.csv  nintendo_software_totals_by_date.csv  playstation_hardware_totals_by_date.csv
eda/: hardware.ipynb  nintendo.ipynb  playstation.ipynb  software.ipynb
preprocess/: melt_and_clean.py
